[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -234.0
margin_top = -168.0
margin_right = 246.0
margin_bottom = 152.0
color = Color( 0, 0, 0, 0.52549 )

[node name="Menu" type="VBoxContainer" parent="."]
modulate = Color( 0.517647, 0.984314, 0.972549, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -54.0
margin_right = 54.5
margin_bottom = 38.0
__meta__ = {
"_editor_description_": ""
}

[node name="Start2" type="Button" parent="Menu"]
margin_right = 97.0
margin_bottom = 20.0
text = "Start"

[node name="Select a level" type="Button" parent="Menu"]
margin_top = 24.0
margin_right = 97.0
margin_bottom = 44.0
text = "Select a level"

[node name="Setting" type="Button" parent="Menu"]
margin_top = 48.0
margin_right = 97.0
margin_bottom = 68.0
text = "Setting"

[node name="Exit" type="Button" parent="Menu"]
margin_top = 72.0
margin_right = 97.0
margin_bottom = 92.0
text = "Exit"

[node name="Start" type="Button" parent="Menu"]
visible = false
margin_top = 72.0
margin_right = 97.0
margin_bottom = 92.0
text = "Start"

[node name="Thanks" type="Button" parent="Menu"]
margin_top = 96.0
margin_right = 97.0
margin_bottom = 116.0
text = "Thanks"

[node name="Level" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -44.0
margin_right = 2.0
margin_bottom = -44.0

[node name="VBoxContainer" type="VBoxContainer" parent="Level"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.5
margin_right = 29.5
margin_bottom = 44.0

[node name="Level1" type="Button" parent="Level/VBoxContainer"]
modulate = Color( 0.72549, 0.745098, 1, 1 )
margin_right = 54.0
margin_bottom = 20.0
text = "Level1"

[node name="Level2" type="Button" parent="Level/VBoxContainer"]
modulate = Color( 0.72549, 0.745098, 1, 1 )
margin_top = 24.0
margin_right = 54.0
margin_bottom = 44.0
text = "Level2"

[node name="BackfromLevel" type="Button" parent="Level"]
margin_left = -24.5
margin_top = 120.0
margin_right = 29.5
margin_bottom = 140.0
text = "Back"

[node name="AudioVedioOptions" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_right = -30.0

[node name="Video" type="HBoxContainer" parent="AudioVedioOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -108.0
margin_right = 68.0
margin_bottom = -28.0

[node name="VBoxContainer" type="VBoxContainer" parent="AudioVedioOptions/Video"]
margin_right = 69.0
margin_bottom = 80.0

[node name="FullScreen" type="Label" parent="AudioVedioOptions/Video/VBoxContainer"]
margin_right = 69.0
margin_bottom = 24.0
size_flags_vertical = 7
text = "FullScreen"

[node name="Borderless" type="Label" parent="AudioVedioOptions/Video/VBoxContainer"]
margin_top = 28.0
margin_right = 69.0
margin_bottom = 52.0
size_flags_vertical = 7
text = "Borderless"

[node name="VSync" type="Label" parent="AudioVedioOptions/Video/VBoxContainer"]
margin_top = 56.0
margin_right = 69.0
margin_bottom = 80.0
size_flags_vertical = 7
text = "VSync"

[node name="Check" type="VBoxContainer" parent="AudioVedioOptions/Video"]
margin_left = 73.0
margin_right = 97.0
margin_bottom = 80.0

[node name="FullScreen" type="CheckBox" parent="AudioVedioOptions/Video/Check"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Borderless" type="CheckBox" parent="AudioVedioOptions/Video/Check"]
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0

[node name="VSync" type="CheckBox" parent="AudioVedioOptions/Video/Check"]
margin_top = 56.0
margin_right = 24.0
margin_bottom = 80.0

[node name="Audio" type="HBoxContainer" parent="AudioVedioOptions"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = 30.0
margin_right = 139.0
margin_bottom = 86.0

[node name="Labels" type="VBoxContainer" parent="AudioVedioOptions/Audio"]
margin_right = 58.0
margin_bottom = 56.0

[node name="Master" type="Label" parent="AudioVedioOptions/Audio/Labels"]
margin_right = 58.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 180, 108 )
size_flags_vertical = 7
text = "Master"

[node name="Music" type="Label" parent="AudioVedioOptions/Audio/Labels"]
margin_top = 20.0
margin_right = 58.0
margin_bottom = 36.0
size_flags_vertical = 7
text = "Music"

[node name="Sound FX" type="Label" parent="AudioVedioOptions/Audio/Labels"]
margin_top = 40.0
margin_right = 58.0
margin_bottom = 56.0
size_flags_vertical = 7
text = "Sound FX"

[node name="Slider" type="VBoxContainer" parent="AudioVedioOptions/Audio"]
margin_left = 62.0
margin_right = 257.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="AudioVedioOptions/Audio/Slider"]
margin_right = 195.0
margin_bottom = 16.0

[node name="Music" type="HSlider" parent="AudioVedioOptions/Audio/Slider"]
margin_top = 20.0
margin_right = 195.0
margin_bottom = 36.0

[node name="Sound FX" type="HSlider" parent="AudioVedioOptions/Audio/Slider"]
margin_top = 40.0
margin_right = 195.0
margin_bottom = 56.0

[node name="VideoSetting" type="Label" parent="AudioVedioOptions"]
modulate = Color( 1, 0.984314, 0.109804, 1 )
margin_left = -25.0
margin_top = -134.0
margin_right = 59.0
margin_bottom = -120.0
text = "Video Setting"

[node name="Audio Setting2" type="Label" parent="AudioVedioOptions"]
modulate = Color( 1, 0.984314, 0.109804, 1 )
margin_left = -41.0
margin_top = 9.0
margin_right = 44.0
margin_bottom = 23.0
text = "Audio Setting"

[node name="BackfromSetting" type="Button" parent="AudioVedioOptions"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 191.0
margin_top = 103.0
margin_right = 240.0
margin_bottom = 123.0
text = "Back"

[node name="ThanksName" type="Control" parent="."]
visible = false
margin_left = 85.0
margin_top = 50.0
margin_right = 413.0
margin_bottom = 232.0

[node name="Labels" type="VBoxContainer" parent="ThanksName"]
margin_right = 58.0
margin_bottom = 56.0

[node name="Music" type="Label" parent="ThanksName/Labels"]
margin_right = 320.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 180, 108 )
size_flags_vertical = 7
text = "Music: 

1. bg:  I buy from GameDev
2. sfx: from platformer2D and Dodge the Creeps
"

[node name="Learning Material" type="Label" parent="ThanksName/Labels"]
margin_top = 86.0
margin_right = 320.0
margin_bottom = 151.0
size_flags_vertical = 7
text = "Learning Material:

1. 16BitDev: Main Menu in Godot
2. Rafa Fiedo: How to keep music between scenes"

[node name="BackfromThanksl" type="Button" parent="ThanksName"]
margin_left = 134.0
margin_top = 182.0
margin_right = 188.0
margin_bottom = 202.0
text = "Back"

[connection signal="pressed" from="Menu/Start2" to="." method="_on_Start2_pressed"]
[connection signal="pressed" from="Menu/Select a level" to="." method="_on_Select_a_level_pressed"]
[connection signal="pressed" from="Menu/Setting" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Menu/Start" to="." method="_on_Start_pressed"]
[connection signal="button_up" from="Menu/Thanks" to="." method="_on_Thanks_button_up"]
[connection signal="pressed" from="Level/VBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Level/VBoxContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Level/BackfromLevel" to="." method="_on_BackfromLevel_pressed"]
[connection signal="toggled" from="AudioVedioOptions/Video/Check/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="toggled" from="AudioVedioOptions/Video/Check/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="toggled" from="AudioVedioOptions/Video/Check/VSync" to="." method="_on_VSync_toggled"]
[connection signal="value_changed" from="AudioVedioOptions/Audio/Slider/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="AudioVedioOptions/Audio/Slider/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="AudioVedioOptions/Audio/Slider/Sound FX" to="." method="_on_Sound_FX_value_changed"]
[connection signal="pressed" from="AudioVedioOptions/BackfromSetting" to="." method="_on_BackfromSetting_pressed"]
[connection signal="pressed" from="ThanksName/BackfromThanksl" to="." method="_on_BackfromThanksl_pressed"]
